services_lb.yml
apiVersion: v1
kind: Service
metadata: 
 name: mysvc
spec:
 type: LoadBalancer
 selector:
  app: webserver  
 ports:
 - targetPort: 80  
   port: 80
